fixes #322 markers not showing in map legend

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -721,6 +721,7 @@ textarea.materialize-textarea+label:after {
 
 .omh-legend {
   padding: 0px;
+  min-height: 20px;
 }
 
  .omh-legend h3 {
